restructured less to work with dotless compiler

--- a/giving.html
+++ b/giving.html
@@ -34,37 +34,32 @@
     <link rel="stylesheet" href="./Themes/new/Compiled/theme.css" />
   </head>
   <body>
-    <section class="p-0 w-100 bg-white flex justify-between content-center drop-shadow" style="z-index: 1000">
-      <a href="/" class="flex grow px-3">
-        <img src="./Themes/new/Assets/Vectors/logo.svg" alt="NewSpring Church Logo" style="max-width: 160px" />
+    <section class="p-0 w-100 bg-white d-flex flex-wrap justify-content-between align-content-center drop-shadow">
+      <a href="/" class="d-inline-block px-3" style="height: max-content;">
+        <img src="./Themes/new/Assets/Vectors/logo.svg" alt="NewSpring Church Logo" style="width: 160px; max-width: 160px" />
       </a>
-      <div>
-        <a href="#" class="inline-block no-underline p-3 p-md-3 text-gray-darker border-solid border-l border-gray-light">
+      <div class="overflow-hidden">
+        <a href="#" class="d-inline-block no-underline p-3 p-md-3 text-gray-darker border-solid border-l border-gray-light">
           <i class="fa-light fa-lg fa-circle-user"></i>
         </a>
 
-        <a href="#" class="inline-block no-underline p-3 p-md-3 text-gray-darker border-solid border-l border-gray-light">
+        <a href="#" class="d-inline-block no-underline p-3 p-md-3 text-gray-darker border-solid border-l border-gray-light">
           <i class="fa-light fa-lg fa-bars"></i>
         </a>
       </div>
     </section>
 
-    <!-- https://images.unsplash.com/photo-1485808269728-77bb07c059a8?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2670&q=100 -->
-    <section class="position-relative text-white flex justify-center content-center" style="background-color:rgba(100,117,139, 1);">
-
+    <section class="position-relative text-white d-flex justify-content-center align-content-center" style="background-color:rgba(100,117,139, 1);">
       <div
         class="fullscreen background-cover background-center"
         style="background-image: url('https://s3.amazonaws.com/ns.images/newspring/give/2023/give_hero_new_2x1.jpg')"></div>
-
-      <div class="fullscreen" style="background: linear-gradient(0deg, rgba(100,117,139, 0) 10%, rgba(100,117,139, .88) 45%)"></div>
-
+      <div class="fullscreen" style="background: linear-gradient(0deg, rgba(100,117,139, 0) 10%, rgba(100,117,139, .9) 50%)"></div>
       <div class="bring-forward text-constrained text-center" style="height: max-content !important;">
         <p class="pretitle text-white">Giving</p>
         <h1 class="display-3">We give generously because God gave first.</h1>
         <p>When we give, we follow Jesus’ example of a life of open-handed generosity with complete dependence on Him.</p>
         <p class="mb-0"><a href="/give/now" class="btn btn-primary drop-shadow">Give Now</a></p>
       </div>
-
     </section>
 
     <section>
@@ -94,7 +89,7 @@
             style="background: linear-gradient(-80deg, rgba(35,70,63, 1) 20%, rgba(35,70,63, 0) 100%)"></div>
         </div>
       </div>
-      <div class="bring-forward page-constrained mx-auto grid grid-md-cols-2 ltr">
+      <div class="bring-forward page-constrained mx-auto d-grid grid-md-cols-2 ltr">
         <div></div>
         <div class="ltr">
           <p class="pretitle text-white">Crypto</p>
@@ -113,7 +108,7 @@
         <p>
           <b>Did you know every transaction has a processing fee associated with it?</b> When you choose a method with a smaller processing fee, you make the most of your giving.</p>
       </div>
-      <div class="flex flex-col flex-lg-row justify-between items-center page-constrained mx-auto mb-6">
+      <div class="d-flex flex-column flex-lg-row justify-content-between items-center page-constrained mx-auto mb-6">
         <div class="flex-1 text-center px-0">
           <div class="mb-5 mb-lg-0">
             <p class="pretitle text-primary mb-5 hidden">Recommended</p>
@@ -154,7 +149,7 @@
           <p class="lead">Interested in learning more about how to give using one of the methods below? Contact us, and we’ll be happy to help.</p>
         </div>
 
-        <div class="page-constrained mx-auto grid grid-cols-1 grid-lg-cols-2 gap-3 gap-lg-5 px-md-5 px-xl-0 mb-4 mb-lg-7">
+        <div class="page-constrained mx-auto d-grid grid-cols-1 grid-lg-cols-2 gap-3 gap-lg-5 px-md-5 px-xl-0 mb-4 mb-lg-7">
           <div>
             <i class="fa-light fa-2x fa-fw mr-1 text-gray fa-money-bill-1-wave mb-3"></i>
             <h3 class="h4">Cash or Check</h3>
@@ -193,7 +188,7 @@
     <section class="position-relative bg-group-hug text-white">
       <div class="bg-pattern bg-pattern-combined fullscreen o-20"></div>
       <div class="bring-forward page-constrained mx-auto">
-        <div class="grid grid-cols-1 grid-lg-cols-2 gap-lg-8 items-center mb-0">
+        <div class="d-grid grid-cols-1 grid-lg-cols-2 gap-lg-8 items-center mb-0">
           <div class="text-center mb-6 mb-lg-0">
             <p class="pretitle text-white">Giving Focus</p>
             <h2 class="h1 mb-5">The Gauntlet Fund</h2>
@@ -228,7 +223,7 @@
             <p class="pretitle text-gatorade">Total Given</p>
             <h3 class="display-1 mb-6">$4,961.83</h3>
 
-            <div class="grid grid-cols-2 gap-5 mb-6">
+            <div class="d-grid grid-cols-2 gap-5 mb-6">
               <div>
                 <p class="pretitle text-gatorade">Givers</p>
                 <h3 class="display-1 mb-0">45</h3>
@@ -408,7 +403,7 @@
         <p class="lead">Pariatur reprehenderit duis aliqua exercitation irure commodo dolore.</p>
 
         <div id="accordion" data-aos="fade-up">
-            <div class="flex" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+            <div class="d-flex" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
               <h3 class="h5">How do I get a contribution statement or view my Giving History?</h3>
               <i class="fa-light fa-2x fa-plus ml-5 mt-1"></i>
             </div>
@@ -419,7 +414,7 @@
               </p>
             </div>
 
-            <div class="flex" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
+            <div class="d-flex" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
               <h3 class="h5">What is the deadline for annual contributions?</h3>
               <i class="fa-light fa-2x fa-plus ml-5 mt-1"></i>
             </div>
@@ -430,7 +425,7 @@
               </p>
             </div>
 
-            <div class="flex" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
+            <div class="d-flex" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
               <h3 class="h5">What address do I use to mail contributions to NewSpring Church?</h3>
               <i class="fa-light fa-2x fa-plus ml-5 mt-1"></i>
             </div>
@@ -442,7 +437,7 @@
               </p>
             </div>
 
-            <div class="flex" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="true" aria-controls="collapseFour">
+            <div class="d-flex" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="true" aria-controls="collapseFour">
               <h3 class="h5">How can I talk to someone about another question that I have?</h3>
               <i class="fa-light fa-2x fa-plus ml-5 mt-1"></i>
             </div>
