--- a/finances.html
+++ b/finances.html
@@ -21,16 +21,16 @@
     <link rel="stylesheet" href="./Themes/new/Compiled/theme.css" />
   </head>
   <body>
-    <section class="p-0 w-100 bg-white flex justify-between content-center drop-shadow" style="z-index: 1000">
-      <a href="/" class="flex grow px-3">
-        <img src="./Themes/new/Assets/Vectors/logo.svg" alt="NewSpring Church Logo" style="max-width: 160px" />
+    <section class="p-0 w-100 bg-white d-flex flex-wrap justify-content-between align-content-center drop-shadow">
+      <a href="/" class="d-inline-block px-3" style="height: max-content">
+        <img src="./Themes/new/Assets/Vectors/logo.svg" alt="NewSpring Church Logo" style="width: 160px; max-width: 160px" />
       </a>
-      <div>
-        <a href="#" class="inline-block no-underline p-3 p-md-3 text-gray-darker border-solid border-l border-gray-light">
+      <div class="overflow-hidden">
+        <a href="#" class="d-inline-block no-underline p-3 p-md-3 text-gray-darker border-solid border-l border-gray-light">
           <i class="fa-light fa-lg fa-circle-user"></i>
         </a>
 
-        <a href="#" class="inline-block no-underline p-3 p-md-3 text-gray-darker border-solid border-l border-gray-light">
+        <a href="#" class="d-inline-block no-underline p-3 p-md-3 text-gray-darker border-solid border-l border-gray-light">
           <i class="fa-light fa-lg fa-bars"></i>
         </a>
       </div>
@@ -125,7 +125,7 @@
         <h2 class="text-white">Tested tools to help you <span class="text-primary">win with money.</span></h2>
       </div>
 
-      <div class="grid grid-cols-1 grid-lg-cols-2 page-constrained mx-auto">
+      <div class="d-grid grid-cols-1 grid-lg-cols-2 page-constrained mx-auto">
         <section
           class="position-relative bg-black text-white px-4 pt-11 pb-5 px-md-5 pb-md-5 rounded-lg overflow-hidden mb-2 mb-md-4 mr-lg-4"
           data-aos="fade-up">
