added js for accordions, sizing utilities, and tailwind sandbox

--- a/finances.html
+++ b/finances.html
@@ -4,34 +4,60 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Finances | NewSpring.cc</title>
+    <title>Giving | NewSpring.cc</title>
+
+    <!-- jQuery -->
+    <script src="https://newspring.cc/Scripts/Bundles/RockJQueryLatest?v=04Na70l5xG-Ak3mWoqN6rMOm3L9-p3kgT_NPfUoJxck1"></script>
+
+    <!-- Bootstrap -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"
+      integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+      crossorigin="anonymous"></script>
 
     <!-- Typekit -->
     <link rel="stylesheet" href="https://use.typekit.net/bcm6gqj.css" />
 
     <!-- FontAwesome -->
-    <script src="https://kit.fontawesome.com/a0871f435c.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/3e0f7fab68.js" crossorigin="anonymous"></script>
 
     <!-- AOS -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <script src="./Themes/new/Scripts/dynamic-aos-min.js"></script>
+    <script src="./Themes/new/Scripts/accordions-min.js"></script>
+
+    <!-- Swiper.js -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 
     <link rel="stylesheet" href="./Themes/new/Styles/bootstrap.css" />
     <link rel="stylesheet" href="./Themes/new/Styles/theme.css" />
   </head>
   <body>
-    <section class="p-0 w-100 bg-white d-flex flex-wrap justify-content-between align-content-center drop-shadow">
-      <a href="/" class="d-inline-block px-3" style="height: max-content">
-        <img src="./Themes/new/Assets/Vectors/logo.svg" alt="NewSpring Church Logo" style="width: 160px; max-width: 160px" />
-      </a>
-      <div class="overflow-hidden">
-        <a href="#" class="d-inline-block no-underline p-3 p-md-3 text-gray-darker border-solid border-l border-gray-light">
-          <i class="fa-light fa-lg fa-circle-user"></i>
+    <section class="p-0 w-100 bg-white d-grid grid-cols-2 justify-content-between align-content-center drop-shadow">
+      <div class="d-grid align-content-center">
+        <a href="/" class="px-3 mb-0">
+          <img src="./Themes/new/Assets/Vectors/logo.svg" alt="NewSpring Church Logo" style="width: 160px; max-width: 160px" />
+        </a>
+      </div>
+      <div class="overflow-hidden text-right">
+        <a href="#" class="d-inline-block no-underline p-3 p-md-3 text-gray-darker border-solid border-l border-gray-lighter">
+          <i class="fa-light fa-lg fa-bars"></i>
         </a>
 
-        <a href="#" class="d-inline-block no-underline p-3 p-md-3 text-gray-darker border-solid border-l border-gray-light">
-          <i class="fa-light fa-lg fa-bars"></i>
+        <span class="hidden-xs hidden-sm">
+          <a href="#" class="d-inline-block no-underline p-3 p-md-3 text-gray-darker border-solid border-l border-gray-lighter">
+            <i class="fa-light fa-lg fa-location-dot"></i>
+          </a>
+
+          <a href="#" class="d-inline-block no-underline p-3 p-md-3 text-gray-darker border-solid border-l border-gray-lighter">
+            <i class="fa-light fa-lg fa-magnifying-glass"></i>
+          </a>
+        </span>
+
+        <a href="#" class="d-inline-block no-underline p-3 p-md-3 text-gray-darker border-solid border-l border-gray-lighter">
+          <i class="fa-light fa-lg fa-circle-user"></i>
         </a>
       </div>
     </section>
@@ -125,7 +151,7 @@
         <h2 class="text-white">Tested tools to help you <span class="text-primary">win with money.</span></h2>
       </div>
 
-      <div class="d-grid grid-cols-1 grid-lg-cols-2 page-constrained mx-auto">
+      <div class="d-grid grid-cols-1 grid-cols-lg-2 page-constrained mx-auto">
         <section
           class="position-relative bg-black text-white px-4 pt-11 pb-5 px-md-5 pb-md-5 rounded-lg overflow-hidden mb-2 mb-md-4 mr-lg-4"
           data-aos="fade-up">
@@ -143,7 +169,9 @@
         </section>
 
         <section class="position-relative bg-black text-white px-4 pt-11 pb-5 px-md-5 pb-md-5 rounded-lg overflow-hidden mb-2 mb-md-4" data-aos="fade-up">
-          <div class="fullscreen background-cover background-center" style="background-image: url('#')"></div>
+          <div
+            class="fullscreen background-cover background-center"
+            style="background-image: url('https://s3.amazonaws.com/ns.images/newspring/finances/2023/finances_fpu_1x1.jpg')"></div>
 
           <div class="fullscreen" style="background: linear-gradient(180deg, rgba(0, 0, 0, 0) 25%, rgba(0, 0, 0, 0.9) 70%)"></div>
 
@@ -163,5 +191,57 @@
         <p class="mb-0"><a href="#" class="btn btn-primary">Contact Us</a></p>
       </div>
     </section>
+
+    <footer class="bg-gray-dark text-white px-4 py-7 px-md-7 py-md-8 text-center">
+      <div class="d-flex flex-column flex-md-row flex-wrap justify-content-between align-content-end">
+        <div data-aos="fade-up" class="w-100 w-md-auto height-max-content text-md-left">
+          <img src="./Themes/new/Assets/Vectors/mark.svg" alt="NewSpring Church Logo" class="mb-3" style="width: 40px; max-width: 40px" />
+          <h6 class="font-black text-uppercase">NewSpring Church</h6>
+          <p>PO Box 1407<br />Anderson, SC 29622<br /><a href="#">(864) 965-9990</a></p>
+          <p class="font-sans font-medium">
+            <small
+              ><a href="https://www.rockrms.com" class="text-white text-hover-white text-decoration-none" target="_blank"
+                >Built on
+                <span class="position-relative fa-layers fa-lg fa-fw" style="top: 3px">
+                  <i class="fa-solid fa-circle" style="color: white" aria-hidden="true"></i>
+                  <i class="fa-inverse fa-brands fa-rockrms" style="color: #ee7725; transform: scale(1.1)" data-fa-transform="shrink-6" aria-hidden="true"></i>
+                </span>
+                Rock RMS</a
+              ></small
+            >
+          </p>
+          <p class="font-sans font-medium text-uppercase text-gray mb-0"><small>&copy; 2023 NewSpring Church</small></p>
+        </div>
+        <div data-aos="fade-up" class="height-max-content text-md-right">
+          <ul class="list-unstyled font-sans font-medium">
+            <li><a href="#" class="text-decoration-none">Privacy Policy</a></li>
+            <li><a href="#" class="text-decoration-none">Terms of Use</a></li>
+            <li><a href="#" class="text-decoration-none">Reprinting &amp; Reposting</a></li>
+          </ul>
+          <ul class="list-inline">
+            <li>
+              <a href="#" class="text-white">
+                <i class="fa-brands fa-xl fa-facebook-f"></i>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="text-white">
+                <i class="fa-brands fa-xl fa-twitter"></i>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="text-white">
+                <i class="fa-brands fa-xl fa-instagram"></i>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="text-white">
+                <i class="fa-brands fa-xl fa-youtube"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
