--- a/finances.html
+++ b/finances.html
@@ -82,13 +82,13 @@
 
     <section id="tithing" class="position-relative">
       <div class="fullscreen" style="background: linear-gradient(0deg, rgba(0, 0, 0, 0.05) 0%, rgba(0, 0, 0, 0) 50%)"></div>
-      <div class="text-constrained mx-auto">
+      <div class="bring-forward text-constrained mx-auto">
         <p class="pretitle">Tithing</p>
         <h2>Tithing is one of the ways we worship God.</h2>
         <p>When we tithe, we honor God as our provider and remind ourselves that all our resources belong to Him and are provided through His grace.</p>
         <p class="mb-0">
           <a href="/give/now" class="btn btn-primary">Give Now</a>
-          <a href="#" class="btn btn-link">Learn More</a>
+          <a href="/give" class="btn btn-link">Learn More</a>
         </p>
       </div>
     </section>
@@ -121,10 +121,17 @@
           with <a href="https://www.ramseysolutions.com/ramseyplus" target="_blank">Ramsey+</a>! This includes access to EveryDollar and Financial Peace
           University.
         </p>
-        <p class="mb-0">
-          <a href="#" class="btn btn-default">Choose Your Campus</a>
-          <a href="#" class="btn btn-primary disabled">Sign Up</a>
-        </p>
+
+        <div class="d-inline-block position-relative">
+          <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Choose Your Campus <span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a href="/aiken">Aiken</a></li>
+            <li><a href="/anderson">Anderson</a></li>
+            <li><a href="/clemson">Clemson</a></li>
+          </ul>
+        </div>
       </div>
     </section>
 
@@ -148,7 +155,7 @@
     <section id="resources" class="bg-gray-darker px-2 px-sm-4 px-md-6 pb-5">
       <div class="page-constrained mx-auto px-2 mb-5">
         <p class="pretitle">Resources</p>
-        <h2 class="text-white">Tested tools to help you <span class="text-primary">win with money.</span></h2>
+        <h2 class="text-white">Tested tools to help you <span class="text-primary">win with money</span></h2>
       </div>
 
       <div class="d-grid grid-cols-1 grid-cols-lg-2 page-constrained mx-auto">
@@ -162,7 +169,7 @@
           <div class="fullscreen" style="background: linear-gradient(180deg, rgba(0, 0, 0, 0) 25%, rgba(0, 0, 0, 0.9) 70%)"></div>
 
           <div class="bring-forward text-constrained mx-auto">
-            <h3 class="h4">Financial Coaching</h3>
+            <h3 class="h5">Financial Coaching</h3>
             <p>NewSpring offers free, confidential, one-on-one Financial Coaching to the community.</p>
             <p class="mb-0"><a href="#" class="btn btn-sm btn-primary drop-shadow">Sign Up</a></p>
           </div>
@@ -176,7 +183,7 @@
           <div class="fullscreen" style="background: linear-gradient(180deg, rgba(0, 0, 0, 0) 25%, rgba(0, 0, 0, 0.9) 70%)"></div>
 
           <div class="bring-forward text-constrained mx-auto">
-            <h3 class="h4">Financial Peace University</h3>
+            <h3 class="h5">Financial Peace University</h3>
             <p>During this class, you and your classmates will go through Financial Peace University together.</p>
             <p class="mb-0"><a href="#" class="btn btn-sm btn-primary drop-shadow">Sign Up</a></p>
           </div>
