--- a/giving.html
+++ b/giving.html
@@ -162,7 +162,7 @@
       <section class="text-center">
         <div class="text-constrained mx-auto mb-6 mb-xl-7">
           <h2>There are many ways to give.</h2>
-          <p class="lead">Interested in learning more about how to give using one of the methods below? Contact us, and we’ll be happy to help.</p>
+          <p class="lead">Interested in learning more about how to give using one of the methods below? Contact us below, and we’ll be happy to help.</p>
         </div>
 
         <div class="page-constrained mx-auto d-grid grid-cols-1 grid-cols-lg-2 gap-3 gap-lg-5 px-md-5 px-xl-0 mb-4 mb-lg-7">
@@ -205,8 +205,8 @@
       <div class="bg-pattern bg-pattern-combined fullscreen o-20"></div>
       <div class="bring-forward page-constrained mx-auto text-center">
         <p class="pretitle text-white">Giving Focus</p>
-        <h2 class="h1 mb-5">The Gauntlet Fund</h2>
-        <div class="d-grid grid-cols-1 grid-cols-md-2 grid-cols-lg-4 gap-md-8 align-items-center mb-0">
+        <h2 class="h1 mb-5 mb-md-6">The Gauntlet Fund</h2>
+        <div class="d-grid grid-cols-1 grid-cols-md-2 grid-cols-lg-4 gapy-md-8 align-items-center mb-0">
           <div class="text-center col-span-md-2 text-lg-left">
             <p class="pretitle text-gatorade">Total Given</p>
             <h3 class="display-1 mb-6">$4,961.83</h3>
