--- a/index.html
+++ b/index.html
@@ -30,17 +30,29 @@
     <link rel="stylesheet" href="./Themes/new/Styles/theme.css" />
   </head>
   <body>
-    <section class="p-0 w-100 bg-white flex justify-between content-center drop-shadow" style="z-index: 1000">
-      <a href="/" class="flex grow px-3">
-        <img src="./Themes/new/Assets/Vectors/logo.svg" alt="NewSpring Church Logo" style="max-width: 160px" />
-      </a>
-      <div>
-        <a href="#" class="inline-block no-underline p-3 p-md-3 text-gray-darker border-solid border-l border-gray-light">
-          <i class="fa-light fa-lg fa-circle-user"></i>
+    <section class="p-0 w-100 bg-white d-grid grid-cols-2 justify-content-between align-content-center drop-shadow">
+      <div class="d-grid align-content-center">
+        <a href="/" class="px-3 mb-0">
+          <img src="./Themes/new/Assets/Vectors/logo.svg" alt="NewSpring Church Logo" style="width: 160px; max-width: 160px" />
+        </a>
+      </div>
+      <div class="overflow-hidden text-right">
+        <a href="#" class="d-inline-block no-underline p-3 p-md-3 text-gray-darker border-solid border-l border-gray-lighter">
+          <i class="fa-light fa-lg fa-bars"></i>
         </a>
 
-        <a href="#" class="inline-block no-underline p-3 p-md-3 text-gray-darker border-solid border-l border-gray-light">
-          <i class="fa-light fa-lg fa-bars"></i>
+        <span class="hidden-xs hidden-sm">
+          <a href="#" class="d-inline-block no-underline p-3 p-md-3 text-gray-darker border-solid border-l border-gray-lighter">
+            <i class="fa-light fa-lg fa-location-dot"></i>
+          </a>
+
+          <a href="#" class="d-inline-block no-underline p-3 p-md-3 text-gray-darker border-solid border-l border-gray-lighter">
+            <i class="fa-light fa-lg fa-magnifying-glass"></i>
+          </a>
+        </span>
+
+        <a href="#" class="d-inline-block no-underline p-3 p-md-3 text-gray-darker border-solid border-l border-gray-lighter">
+          <i class="fa-light fa-lg fa-circle-user"></i>
         </a>
       </div>
     </section>
@@ -196,5 +208,29 @@
         <button type="button" class="btn btn-link">Link</button>
       </div>
     </div>
+
+    <script>
+      document.addEventListener(
+        "DOMContentLoaded",
+        function () {
+          let pretitleElements = document.querySelectorAll(".pretitle");
+          for (let i = 0; i < pretitleElements.length; i++) {
+            let pretitle = pretitleElements[i],
+              nextSibling = pretitle.nextElementSibling,
+              computedStyle = getComputedStyle(nextSibling),
+              fontSize = computedStyle.fontSize,
+              lineHeight = computedStyle.lineHeight,
+              letterSpacing = computedStyle.letterSpacing,
+              calculatedLineHeight = Math.round((lineHeight.replace("px", "") / fontSize.replace("px", "")) * 100) / 100,
+              seperator = " &nbsp; ";
+
+            // Do stuff
+            console.log();
+            pretitle.innerHTML = pretitle.innerHTML + seperator + fontSize + seperator + calculatedLineHeight + seperator + letterSpacing;
+          }
+        },
+        false
+      );
+    </script>
   </body>
 </html>
