building easter page

--- a/easter.html
+++ b/easter.html
@@ -65,58 +65,239 @@
     </section>
 
     <span class="easter">
-      <section class="bg-pink text-white d-grid align-content-center justify-content-center">
-        <div class="p-5 p-md-7 bg-blue-dark">
-          <svg style="width: 600px; max-width: 100%" viewBox="0 0 910 236" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <g clip-path="url(#clip0_1_3)">
-              <path d="M62.45 23.32H24.61V40.89H58.19V62.07H24.61V79.64H62.46V101.08H0V1.87H62.45V23.31V23.32Z" fill="#FCE6EF" />
-              <path
-                d="M182.18 101.08L175.66 82.16H139.23L132.71 101.08H106.49L142.2 1.87H172.49L208.34 101.07H182.18V101.08ZM146.14 62.07H168.75L157.45 29.26L146.15 62.07H146.14Z"
-                fill="#FCE6EF" />
-              <path
-                d="M249.84 86.42L263.08 68.66C270.12 76.09 282 81.9 290.59 81.9C296.27 81.9 299.31 79.38 299.31 74.73C299.31 69.76 295.5 66.85 282.26 60.71C260.95 50.96 253.39 43.01 253.39 29.39C253.39 11.56 266.24 0 286.07 0C298.54 0 311.39 4.91 321.4 13.37L309.13 31.52C302.48 25.58 292.34 21.06 285.17 21.06C280.39 21.06 277.74 23.06 277.74 26.74C277.74 30.68 280.9 33.33 293.76 39.21C315.98 49.35 324.31 58.52 324.31 73.05C324.31 91.39 311.07 102.95 290.08 102.95C275.1 102.95 260.05 96.69 249.84 86.42Z"
-                fill="#FCE6EF" />
-              <path d="M440.61 1.87V23.31H416.26V101.07H391.65V23.32H367.3V1.87H440.61Z" fill="#FCE6EF" />
-              <path d="M550.06 23.32H512.21V40.89H545.79V62.07H512.21V79.64H550.06V101.08H487.61V1.87H550.06V23.31V23.32Z" fill="#FCE6EF" />
-              <path
-                d="M657.45 101.08L635.94 62.07H626.12V101.08H601.51V1.87H641.3C665 1.87 675.47 15.5 675.47 32.29C675.47 43.72 669.59 53.15 660.62 58.19L686.2 101.08H657.46H657.45ZM626.13 21.96V41.98H638.79C647.7 41.98 650.87 37.98 650.87 31.9C650.87 25.82 647.71 21.95 638.79 21.95H626.13V21.96Z"
-                fill="#FCE6EF" />
-              <path
-                d="M805.52 101.08L795.9 76.86H746.56L736.94 101.08H726.99L766.77 1.87H775.55L815.34 101.07H805.52V101.08ZM749.91 68.27H792.54L771.23 14.47L749.92 68.27H749.91Z"
-                fill="#FCE6EF" />
-              <path d="M909.49 1.81V10.46H881.78V101.07H872.67V10.46H844.96V1.81H909.48H909.49Z" fill="#FCE6EF" />
-              <path d="M69.17 142.12H92.02V234.24H68.57L22.87 175.29V234.24H0.019989V142.12H23.35L69.17 200.89V142.12Z" fill="#EE79C7" />
-              <path d="M177.79 162.03H142.65V178.34H173.84V198.01H142.65V214.32H177.79V234.23H119.8V142.11H177.79V162.02V162.03Z" fill="#EE79C7" />
-              <path
-                d="M229 234.24L196.55 142.12H220.66L242.13 205.03L258.2 142.12H278.35L294.42 205.03L315.95 142.12H340L307.61 234.24H282.06L268.27 183.26L254.54 234.24H228.99H229Z"
-                fill="#EE79C7" />
-              <path
-                d="M354.83 220.62L367.12 204.13C373.66 211.03 384.69 216.42 392.67 216.42C397.95 216.42 400.77 214.08 400.77 209.76C400.77 205.14 397.23 202.44 384.94 196.75C365.15 187.69 358.13 180.32 358.13 167.66C358.13 151.11 370.06 140.37 388.48 140.37C400.05 140.37 411.99 144.93 421.29 152.79L409.9 169.64C403.72 164.12 394.31 159.93 387.65 159.93C383.21 159.93 380.75 161.79 380.75 165.21C380.75 168.87 383.69 171.33 395.62 176.78C416.25 186.2 423.99 194.71 423.99 208.21C423.99 225.24 411.7 235.98 392.2 235.98C378.29 235.98 364.31 230.16 354.84 220.63L354.83 220.62Z"
-                fill="#EE79C7" />
-              <path
-                d="M489.95 142.12C509.5 142.12 521.68 155.85 521.68 172.71C521.68 189.57 509.5 202.7 489.95 202.7H470.94V234.25H448.09V142.13H489.95V142.12ZM485.15 183.74C494.63 183.74 498.82 179.48 498.82 172.35C498.82 165.22 494.62 161.01 485.15 161.01H470.94V183.74H485.15Z"
-                fill="#EE79C7" />
-              <path
-                d="M596.59 234.24L576.62 198.02H567.5V234.24H544.65V142.12H581.59C603.6 142.12 613.32 154.77 613.32 170.37C613.32 180.99 607.86 189.74 599.53 194.42L623.28 234.24H596.59ZM567.5 160.77V179.36H579.25C587.53 179.36 590.47 175.64 590.47 170C590.47 164.36 587.53 160.76 579.25 160.76H567.5V160.77Z"
-                fill="#EE79C7" />
-              <path d="M644.51 234.24V142.12H667.36V234.24H644.51Z" fill="#EE79C7" />
-              <path d="M764.16 142.12H787.01V234.24H763.56L717.86 175.29V234.24H695.01V142.12H718.34L764.16 200.89V142.12Z" fill="#EE79C7" />
-              <path
-                d="M909.95 188.06C909.95 216.07 889.08 235.98 860.47 235.98C831.86 235.98 810.93 216.07 810.93 188.18C810.93 160.29 831.86 140.38 860.47 140.38C878.04 140.38 892.62 147.76 901.37 160.17L881.46 171.08C876.66 164.84 869.17 161.13 860.35 161.13C845.24 161.13 833.78 172.58 833.78 188.18C833.78 203.78 845.23 215.23 860.47 215.23C872.16 215.23 881.58 208.51 885.36 198.26H862.81V180.21H909.35C909.71 182.43 909.95 185.13 909.95 188.07V188.06Z"
-                fill="#EE79C7" />
-            </g>
-            <defs>
-              <clipPath id="clip0_1_3">
-                <rect width="909.95" height="235.98" fill="white" />
-              </clipPath>
-            </defs>
-          </svg>
+      <section class="d-grid grid-cols-4 grid-cols-sm-6 grid-cols-md-8 p-0">
+        <img src="/Themes/new/Assets/Vectors/easter/1.svg" alt="" class="w-100" />
+        <img src="/Themes/new/Assets/Vectors/easter/2.svg" alt="" class="w-100" />
+        <img src="/Themes/new/Assets/Vectors/easter/3.svg" alt="" class="w-100" />
+        <img src="/Themes/new/Assets/Vectors/easter/4.svg" alt="" class="w-100" />
+        <img src="/Themes/new/Assets/Vectors/easter/5.svg" alt="" class="w-100" />
+        <img src="/Themes/new/Assets/Vectors/easter/6.svg" alt="" class="w-100" />
+        <img src="/Themes/new/Assets/Vectors/easter/7.svg" alt="" class="w-100" />
+        <img src="/Themes/new/Assets/Vectors/easter/8.svg" alt="" class="w-100" />
+        <img src="/Themes/new/Assets/Vectors/easter/9.svg" alt="" class="w-100" />
+        <img src="/Themes/new/Assets/Vectors/easter/10.svg" alt="" class="w-100" />
+        <img src="/Themes/new/Assets/Vectors/easter/11.svg" alt="" class="w-100" />
+        <img src="/Themes/new/Assets/Vectors/easter/12.svg" alt="" class="w-100" />
+        <img src="/Themes/new/Assets/Vectors/easter/13.svg" alt="" class="w-100" />
+        <img src="/Themes/new/Assets/Vectors/easter/14.svg" alt="" class="w-100" />
+        <img src="/Themes/new/Assets/Vectors/easter/15.svg" alt="" class="w-100" />
+        <img src="/Themes/new/Assets/Vectors/easter/16.svg" alt="" class="w-100" />
+        <img src="/Themes/new/Assets/Vectors/easter/5.svg" alt="" class="w-100" />
+        <img src="/Themes/new/Assets/Vectors/easter/17.svg" alt="" class="w-100" />
+        <img src="/Themes/new/Assets/Vectors/easter/18.svg" alt="" class="w-100" />
+        <img src="/Themes/new/Assets/Vectors/easter/11.svg" alt="" class="w-100" />
+        <img src="/Themes/new/Assets/Vectors/easter/19.svg" alt="" class="w-100" />
+        <img src="/Themes/new/Assets/Vectors/easter/18.svg" alt="" class="w-100" />
+        <img src="/Themes/new/Assets/Vectors/easter/20.svg" alt="" class="w-100" />
+        <img src="/Themes/new/Assets/Vectors/easter/21.svg" alt="" class="w-100" />
+        <img src="/Themes/new/Assets/Vectors/easter/1.svg" alt="" class="w-100" />
+        <img src="/Themes/new/Assets/Vectors/easter/22.svg" alt="" class="w-100" />
+        <img src="/Themes/new/Assets/Vectors/easter/23.svg" alt="" class="w-100" />
+        <img src="/Themes/new/Assets/Vectors/easter/24.svg" alt="" class="w-100" />
+        <img src="/Themes/new/Assets/Vectors/easter/25.svg" alt="" class="w-100" />
+        <img src="/Themes/new/Assets/Vectors/easter/26.svg" alt="" class="w-100" />
+        <img src="/Themes/new/Assets/Vectors/easter/27.svg" alt="" class="w-100" />
+        <img src="/Themes/new/Assets/Vectors/easter/28.svg" alt="" class="w-100" />
+      </section>
+
+      <section id="about" class="bg-pink-light text-center">
+        <div class="text-constrained mx-auto">
+          <h2 class="display-2 text-blue">The good news of Jesus really is for everyone everywhere.</h2>
+          <p class="lead text-pink">But sometimes our failures, doubts, and insecurities get in the way of us receiving that good news for ourselves.</p>
+          <p>
+            This Easter, join us to celebrate the life, death, and resurrection of Jesus Christ. We’ll have fun, worship together, and enjoy free coffee and
+            photo opportunities. We’ll also have a gift for every child who joins us in KidSpring!
+          </p>
+          <div class="d-grid grid-cols-1 grid-cols-sm-2 gap-y-2 gap-x-2 mx-auto" style="max-width: 500px">
+            <input type="text" name="" id="" />
+            <a href="#" class="btn btn-primary">Find a Location</a>
+          </div>
+        </div>
+      </section>
+
+      <section id="services" class="">
+        <div class="text-constrained mx-auto text-center">
+          <p class="pretitle">When &amp; Where</p>
+          <h2 class="text-blue display-2 mb-7">Service Times</h2>
+          <div class="position-relative text-left mb-5">
+            <h3 class="position-absolute top-0 left-0 display-1 text-pink o-60" style="margin-top: -22px">AKN</h3>
+            <h3 class="text-blue">Aiken</h3>
+            <div class="d-grid grid-cols-1 grid-cols-md-2">
+              <div>
+                <i class="pull-left mr-3 mb-5 mt-1 fa-light fa-fw fa-2x fa-location-dot"></i>
+                <p>
+                  1108 Cedar Lane<br />
+                  Aiken, SC 29801
+                </p>
+              </div>
+              <div>
+                <i class="pull-left mr-3 mb-5 mt-1 fa-light fa-fw fa-2x fa-clock"></i>
+                <p>
+                  Saturday, April 8 at 6pm<br />
+                  Sunday, April 9 at 9:15am and 11:15am
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="position-relative text-left mb-5">
+            <h3 class="position-absolute top-0 left-0 display-1 text-pink o-60" style="margin-top: -22px">AND</h3>
+            <h3 class="text-blue">Anderson</h3>
+            <div class="d-grid grid-cols-1 grid-cols-md-2">
+              <div>
+                <i class="pull-left mr-3 mb-5 mt-1 fa-light fa-fw fa-2x fa-location-dot"></i>
+                <p>2940 Concord Road<br />Anderson, SC 29621</p>
+              </div>
+              <div>
+                <i class="pull-left mr-3 mb-5 mt-1 fa-light fa-fw fa-2x fa-clock"></i>
+                <p>
+                  Saturday, April 8 at 6pm<br />
+                  Sunday, April 9 at 9:15am and 11:15am
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="kids" class="bg-pink text-white text-center">
+        <div class="text-constrained mx-auto">
+          <p class="pretitle text-blue">For Kids</p>
+          <h2 class="display-2">Easter at KidSpring!</h2>
+          <p>
+            KidSpring is a place where kids (birth-fifth grade) learn about Jesus on their level! Easter is the best day ever because Jesus is alive! This year
+            on Easter weekend, kids will experience a fun celebration full of games, dancing, prizes, and so much more as we celebrate that Jesus is the best
+            ever!
+          </p>
+          <p><a href="/kidspring" class="btn btn-blue">More About KidSpring</a></p>
+        </div>
+      </section>
+
+      <section id="online" class="bg-blue text-white text-center">
+        <div class="text-constrained mx-auto mb-6">
+          <p class="pretitle text-pink-light">Watch Online</p>
+          <h2 class="display-2">Can’t make it to a NewSpring campus for Easter?</h2>
+          <p class="lead text-pink-light hidden">Can’t make it to a NewSpring campus for Easter?</p>
+          <p>Join us online on Saturday, April 8 at 6pm or Sunday, April 9 on-demand after 9:15am.</p>
         </div>
 
-        <h1 class="display-2 hidden">
-          The good news of Jesus really is for everyone everywhere. But sometimes our failures, doubts, and insecurities get in the way of us receiving that
-          good news for ourselves.
-        </h1>
+        <div class="page-constrained mx-auto text-center">
+          <div class="d-grid grid-cols-1 grid-cols-sm-2 gap-y-6">
+            <a href="/watchlive" class="text-white text-decoration-none">
+              <i class="fa-light fa-3x text-pink-light fa-globe mb-3"></i>
+              <h3 class="h5 text-uppercase">NewSpring.cc</h3>
+            </a>
+            <a href="https://www.youtube.com/newspringchurch" target="_blank" class="text-white text-decoration-none">
+              <i class="fa-brands fa-3x text-pink-light fa-youtube mb-3"></i>
+              <h3 class="h5 text-uppercase">YouTube</h3>
+            </a>
+            <a href="#" class="text-white text-decoration-none">
+              <i class="fa-regular fa-3x text-pink-light fa-tv mb-3"></i>
+              <h3 class="h5 text-uppercase">Roku</h3>
+            </a>
+            <a href="#" class="text-white text-decoration-none">
+              <i class="fa-brands fa-3x text-pink-light fa-apple mb-3"></i>
+              <h3 class="h5 text-uppercase">AppleTV</h3>
+            </a>
+          </div>
+        </div>
+      </section>
+
+      <section id="faqs">
+        <div class="text-constrained mx-auto">
+          <p class="pretitle text-pink">FAQs</p>
+          <h2 class="display-2 text-blue">Frequently Asked Questions</h2>
+
+          <div id="accordion" class="d-grid grid-cols-1 gap-3" data-aos="fade-up">
+            <div>
+              <div
+                class="d-flex cursor-pointer"
+                data-toggle="collapse"
+                data-parent="#accordion"
+                href="#collapseOne"
+                aria-expanded="true"
+                aria-controls="collapseOne">
+                <h3 class="h5">How long is the service?</h3>
+                <i class="fa-light fa-lg fa-minus ml-5 mt-1 text-pink"></i>
+              </div>
+              <div id="collapseOne" class="collapse in" role="tabpanel" aria-labelledby="headingOne">
+                <p class="text-italic text-gray-dark">
+                  Gatherings last just over an hour. We usually start by singing then hear from a member of the teaching team. (Check out past sermons to get a
+                  sense of their teaching styles.)
+                </p>
+              </div>
+            </div>
+
+            <div>
+              <div
+                class="d-flex cursor-pointer"
+                data-toggle="collapse"
+                data-parent="#accordion"
+                href="#collapseTwo"
+                aria-expanded="true"
+                aria-controls="collapseTwo">
+                <h3 class="h5">What should I wear?</h3>
+                <i class="fa-light fa-lg fa-plus ml-5 mt-1 text-pink"></i>
+              </div>
+              <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingOne">
+                <p class="text-italic text-gray-dark">Most people dress casually, but you are welcome to wear whatever makes you comfortable.</p>
+              </div>
+            </div>
+            <div>
+              <div
+                class="d-flex cursor-pointer"
+                data-toggle="collapse"
+                data-parent="#accordion"
+                href="#collapseThree"
+                aria-expanded="true"
+                aria-controls="collapseThree">
+                <h3 class="h5">Can my kids join me in the service?</h3>
+                <i class="fa-light fa-lg fa-plus ml-5 mt-1 text-pink"></i>
+              </div>
+              <div id="collapseThree" class="collapse" role="tabpanel" aria-labelledby="headingOne">
+                <p class="text-italic text-gray-dark">
+                  In KidSpring, we teach kids about Jesus on their level in a safe, fun environment, but if you would prefer for your child to join your family
+                  in the service, they are welcome to do so!
+                </p>
+              </div>
+            </div>
+            <div>
+              <div
+                class="d-flex cursor-pointer"
+                data-toggle="collapse"
+                data-parent="#accordion"
+                href="#collapseFour"
+                aria-expanded="true"
+                aria-controls="collapseFour">
+                <h3 class="h5">Are there any other services the week of Easter?</h3>
+                <i class="fa-light fa-lg fa-plus ml-5 mt-1 text-pink"></i>
+              </div>
+              <div id="collapseFour" class="collapse" role="tabpanel" aria-labelledby="headingOne">
+                <p class="text-italic text-gray-dark">
+                  Some campuses will have Good Friday services or other family friendly events the week of Easter. To learn more, subscribe to your campus’ Need
+                  to Know or visit your campus’ page to scroll through the events calendar.
+                </p>
+              </div>
+            </div>
+            <div>
+              <div
+                class="d-flex cursor-pointer"
+                data-toggle="collapse"
+                data-parent="#accordion"
+                href="#collapseFive"
+                aria-expanded="true"
+                aria-controls="collapseFive">
+                <h3 class="h5">Do I need to wear a mask?</h3>
+                <i class="fa-light fa-lg fa-plus ml-5 mt-1 text-pink"></i>
+              </div>
+              <div id="collapseFive" class="collapse" role="tabpanel" aria-labelledby="headingOne">
+                <p class="text-italic text-gray-dark">
+                  Masks are no longer required at our campuses unless otherwise required by local ordinances. If you feel more comfortable wearing one, we
+                  encourage you to do so!
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
     </span>
 
