updates to easter page and styles

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 
     <div class="bg-white px-5 py-7 px-md-7 py-md-8">
       <div class="text-constrained mx-auto">
+        <p><a href="/easter.html">Easter</a></p>
         <p class="pretitle">Display 1</p>
         <h1 class="display-1">Through creation, the Spirit of God brought life and order into the darkness and chaos.</h1>
 
